Fixed notification z-index

--- a/app/sass/blocks/notification/_notification.scss
+++ b/app/sass/blocks/notification/_notification.scss
@@ -32,7 +32,7 @@
         position: absolute;
         top: -8px;
         right: -8px;
-        z-index: 1;
+        z-index: 5;
         width: 290px;
         background: $white-color;
         padding: 10px 15px;
